Prevent scrollbars on select2 item
This is unrelated to the rest of the PR, I just noticed this issue so decided to fix it. I can't find any explanation, or think of any good reason for this rule, so I'm burning it.

--- a/app/webpacker/css/admin_v3/components/select2.scss
+++ b/app/webpacker/css/admin_v3/components/select2.scss
@@ -111,7 +111,6 @@
       color: $color-body-text;
       min-height: 22px;
       clear: both;
-      overflow: auto;
     }
 
     &.select2-no-results,
